package Model;

public class Setting {
}
