package View;

import Model.Observer;

import javax.swing.*;

public class EndGameWIndow extends JFrame implements Observer {
}
