@startuml
'https://plantuml.com/class-diagram
skinparam style strictuml
skinparam classAttributeIconSize 0
skinparam classFontStyle Bold
hide enum methods
hide interface attributes

package MasterMind{
    class MasterMindApp{
    }
        package Controller{
            class MasterController{
            }
        }
        package Model {
            class Board{
            }
            class Pawn{
            }
            enum Color{
            }
            class Hint{
            }
            interface Observer{
            }
            class Round{
            }
            class Game{
            }
            class Combination{
            }
            class Player{
            }
            class Settings{
            }
        }
        package View {
            class GameWindow {
            }
            class StartWindow{
            }
            class EndGameWindow{
            }
        }
}

'Base pas ouf mais c'est un début'
'####VUES####'
GameWindow ...|> Observer
StartWindow ...|> Observer
EndGameWindow ...|> Observer
'####MODEL####'
Combination *---> Pawn : > possède
Pawn *---> Color : > possède
Game *---> Round : > est un ensemble de
Hint *--> Pawn : > Connait
Board o--> Observer : < observe
Round *---> Combination : > possède (secret)
Board o---> Game : > possède
Game *--> Settings
Player ..> Game : > joue
Round o--> Hint : connait
MasterController ...> Settings : decide
'a revoir'

'####CONTROLLER####'
MasterController ...> Board : > manipule
MasterController ...> Player : > manipule
'####MAIN####'
MasterMindApp ...> Board : <<uses>>
@enduml